force-app/main/default/objects/Cities__c/Cities__c.object-meta.xml
<CustomObject>
    <label>Comuni</label>
    <nameField>
        <label>Comuni Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comuni</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>