force-app/main/default/objects/Cities__c/fields/Codice_comune_catastale__c.field-meta.xml
<CustomField>
    <fullName>Codice_comune_catastale__c</fullName>
    <label>Codice comune catastale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>