force-app/main/default/objects/Cities__c/fields/Comune_amministrativo__c.field-meta.xml
<CustomField>
    <fullName>Comune_amministrativo__c</fullName>
    <label>Comune amministrativo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>