force-app/main/default/objects/Cities__c/fields/Comune_catastale__c.field-meta.xml
<CustomField>
    <fullName>Comune_catastale__c</fullName>
    <label>Comune catastale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>