force-app/main/default/objects/Cities__c/fields/TARI_Gestita__c.field-meta.xml
<CustomField>
    <fullName>TARI_Gestita__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TARI Gestita</label>
    <type>Checkbox</type>
</CustomField>